# aruco_visual_servoing

./: README.md
.devin/: wiki.json
aruco_interfaces/: CMakeLists.txt  package.xml
aruco_visual_servoing/: package.xml  setup.cfg  setup.py
aruco_visual_servoing/aruco_visual_servoing/: aruco_detector_node.py  aruco_generate_markers.py  visual_servoing_node.py  visual_servoing_node_no_forward.py
aruco_visual_servoing/config/: aruco_params.yaml  ros_gz_bridge.yaml
aruco_visual_servoing/launch/: servoing.launch.py  simulation.launch.py
aruco_visual_servoing/models/aruco_box0/: model.dae
aruco_visual_servoing/models/aruco_box0/materials/textures/: marker_info.yml
aruco_visual_servoing/models/aruco_box1/: model.dae
aruco_visual_servoing/models/aruco_box1/materials/textures/: marker_info.yml
aruco_visual_servoing/models/aruco_box2/: model.dae
aruco_visual_servoing/models/aruco_box2/materials/textures/: marker_info.yml
aruco_visual_servoing/models/aruco_box3/: model.dae
aruco_visual_servoing/models/aruco_box3/materials/textures/: marker_info.yml
aruco_visual_servoing/models/aruco_box4/: model.dae
aruco_visual_servoing/models/aruco_box4/materials/textures/: marker_info.yml
aruco_visual_servoing/rviz/: aruco_visual_servoing.rviz
aruco_visual_servoing/urdf/: aruco_bot_diff.gazebo.xacro  aruco_bot_diff.xacro  aruco_bot_skid_steer.gazebo.xacro  aruco_bot_skid_steer.xacro
aruco_visual_servoing/worlds/: aruco_world.world
